--- a/index.html
+++ b/index.html
@@ -1,13 +1,106 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <style>
+      /* 启动加载效果的样式 */
+      #app-loading {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #f0f2f5;
+        z-index: 9999;
+        transition: opacity 0.3s ease-out;
+      }
+
+      .loading-container {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .loading-logo {
+        width: 80px;
+        height: 80px;
+        margin-bottom: 24px;
+        animation: bounce 1.5s ease infinite;
+      }
+
+      .loading-title {
+        font-size: 24px;
+        font-weight: bold;
+        color: #409eff;
+        margin-bottom: 12px;
+      }
+
+      .loading-spinner {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        border: 3px solid rgba(64, 158, 255, 0.2);
+        border-radius: 50%;
+        border-top-color: #409eff;
+        animation: spin 1s ease-in-out infinite;
+      }
+
+      .loading-tip {
+        margin-top: 16px;
+        font-size: 14px;
+        color: #606266;
+      }
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
+      @keyframes bounce {
+        0%,
+        20%,
+        50%,
+        80%,
+        100% {
+          transform: translateY(0);
+        }
+        40% {
+          transform: translateY(-20px);
+        }
+        60% {
+          transform: translateY(-10px);
+        }
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
+
+    <!-- 应用启动loading -->
+    <div id="app-loading">
+      <div class="loading-container">
+        <div class="loading-logo">
+          <!-- 可以替换为您的 logo SVG 或图片 -->
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="50" cy="50" r="40" fill="#409eff" />
+            <path d="M30,50 L70,50 M50,30 L50,70" stroke="white" stroke-width="8" />
+          </svg>
+        </div>
+        <div class="loading-title">应用加载中</div>
+        <div class="loading-spinner"></div>
+        <div class="loading-tip">请稍候，精彩即将呈现...</div>
+      </div>
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
